refactor: move site to root level for proper serving

--- a/index.html
+++ b/index.html
@@ -1,17 +1,103 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Pooja Website</title>
-    <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; margin: 2rem; }
-      h1 { margin-bottom: .5rem; }
-      p { color: #444; }
-    </style>
-  </head>
-  <body>
-    <h1>Welcome to Pooja's Website</h1>
-    <p>Replace this placeholder with your actual content.</p>
-  </body>
-  </html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Dr Pooja Karnik — Klassiek Homeopaat</title>
+  <meta name="description" content="Classical homeopathy consultations, training, and wellness with Dr Pooja Karnik, B.H.M.S in the Netherlands." />
+  <link rel="preload" as="style" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/main.css" />
+</head>
+<body>
+  <header class="site-header">
+    <div class="container topbar">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div>
+          <div class="title">Dr Pooja Karnik, B.H.M.S</div>
+          <div class="subtitle">Klassiek Homeopaat</div>
+        </div>
+      </div>
+      <nav class="nav" aria-label="Primary">
+        <a href="./index.html">Home</a>
+        <a href="./pages/about.html">About</a>
+        <a href="./pages/treatments.html">Treatments</a>
+        <a href="./pages/training.html">Training</a>
+        <a href="./pages/appointments.html">Appointments</a>
+        <a href="./pages/contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <section class="hero">
+    <div class="container wrap">
+      <div>
+        <h1>Classical Homeopathy for Whole-Person Wellness</h1>
+        <p class="lead">Evidence-informed, compassionate care tailored to you. Consultations in English, Dutch, and Hindi.</p>
+        <div class="badges">
+          <span class="badge purple">BHMS</span>
+          <span class="badge pink">Klassiek Homeopaat</span>
+          <span class="badge orange">Consultations</span>
+          <span class="badge green">Training & Workshops</span>
+        </div>
+        <div class="cta-row">
+          <a class="button primary" href="./pages/appointments.html">Book an Appointment</a>
+          <a class="button secondary" href="./pages/training.html">View Training</a>
+          <a class="button outline" href="./pages/contact.html">Get in Touch</a>
+        </div>
+      </div>
+      <aside class="card">
+        <h3>Upcoming Training</h3>
+        <p><strong>Biochemic Tissue Salts</strong> for Rheumatic Conditions</p>
+        <p>Sat 4 Oct, 2025 · 10:00–17:00 · Uithoorn</p>
+        <p>€95 per person · Tea & Coffee provided</p>
+        <p class="mt-2"><a class="button accent" href="https://eventix.shop/adkrvjib" target="_blank" rel="noopener">Register Now</a></p>
+        <p class="mt-1"><small>Also receive NVKH Accreditation Points</small></p>
+      </aside>
+    </div>
+  </section>
+
+  <main>
+    <section class="section">
+      <div class="container">
+        <h2>Care Areas</h2>
+        <div class="grid">
+          <article class="card">
+            <h3>Chronic Conditions</h3>
+            <p>Support for rheumatic and autoimmune conditions with individualized remedies.</p>
+          </article>
+          <article class="card">
+            <h3>Acute Care</h3>
+            <p>Gentle, targeted support for acute complaints to aid recovery.</p>
+          </article>
+          <article class="card">
+            <h3>Women & Children</h3>
+            <p>Holistic care through life stages including pregnancy and pediatrics.</p>
+          </article>
+          <article class="card">
+            <h3>Mind-Body Health</h3>
+            <p>Integrative support for stress, sleep, and emotional wellbeing.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <h2>Why Choose Classical Homeopathy?</h2>
+        <p>We look at you as a whole person, not just symptoms. Care is tailored after a thorough case-taking, with follow-ups to monitor progress.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container wrap">
+      <div class="center">
+        <small>© <span data-year></span> Dr Pooja Karnik. All rights reserved.</small>
+      </div>
+    </div>
+  </footer>
+
+  <script src="./scripts/main.js" defer></script>
+</body>
+</html>
