feat: enhance all pages with comprehensive professional content

--- a/index.html
+++ b/index.html
@@ -82,10 +82,87 @@
       </div>
     </section>
 
-    <section class="section">
+    <section class="section" style="background: var(--color-bg-alt);">
       <div class="container">
         <h2>Why Choose Classical Homeopathy?</h2>
-        <p>We look at you as a whole person, not just symptoms. Care is tailored after a thorough case-taking, with follow-ups to monitor progress.</p>
+        <p>Classical homeopathy treats you as a whole person, not just isolated symptoms. Each consultation involves detailed case-taking to understand your unique constitution, lifestyle, and health history. Remedies are carefully selected and adjusted based on your response, with regular follow-ups to monitor progress and optimize care.</p>
+        <div class="grid mt-3">
+          <article class="card">
+            <h3>🌿 Natural & Gentle</h3>
+            <p>Safe remedies suitable for all ages, from infants to elderly.</p>
+          </article>
+          <article class="card">
+            <h3>🎯 Individualized Care</h3>
+            <p>Treatment tailored specifically to your unique needs and constitution.</p>
+          </article>
+          <article class="card">
+            <h3>💪 Long-term Wellness</h3>
+            <p>Addresses root causes to support lasting health improvements.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container center">
+        <h2>What to Expect</h2>
+        <div class="grid mt-2">
+          <article class="card">
+            <h3>Initial Consultation</h3>
+            <p><strong>90-120 minutes</strong></p>
+            <p>Comprehensive case-taking covering physical, emotional, and lifestyle aspects. We'll discuss your health history, current concerns, and goals.</p>
+          </article>
+          <article class="card">
+            <h3>Follow-up Sessions</h3>
+            <p><strong>30-45 minutes</strong></p>
+            <p>Review your progress, adjust remedies if needed, and continue supporting your healing journey.</p>
+          </article>
+          <article class="card">
+            <h3>Ongoing Support</h3>
+            <p><strong>As needed</strong></p>
+            <p>Available for questions between appointments. Regular check-ins ensure optimal results.</p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" style="background: var(--color-bg-alt);">
+      <div class="container">
+        <h2 class="center">Patient Testimonials</h2>
+        <div class="grid mt-2">
+          <article class="card">
+            <p style="font-style: italic;">"Dr. Karnik's compassionate approach and thorough consultations have made a real difference in managing my chronic condition. I feel heard and supported."</p>
+            <p class="mt-2"><strong>— Sarah M.</strong></p>
+          </article>
+          <article class="card">
+            <p style="font-style: italic;">"The holistic approach helped not just my physical symptoms but also improved my overall wellbeing. Highly recommended!"</p>
+            <p class="mt-2"><strong>— Rajesh P.</strong></p>
+          </article>
+          <article class="card">
+            <p style="font-style: italic;">"Professional, knowledgeable, and truly caring. The homeopathic remedies have been gentle yet effective for my children."</p>
+            <p class="mt-2"><strong>— Emma V.</strong></p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container center">
+        <h2>Get Started Today</h2>
+        <p class="lead mt-1">Ready to experience personalized, holistic care?</p>
+        <div class="cta-row mt-2" style="justify-content: center;">
+          <a class="button primary" href="./pages/appointments.html">Book Your Consultation</a>
+          <a class="button outline" href="./pages/contact.html">Contact Us</a>
+        </div>
+        <div class="mt-3" style="max-width: 600px; margin-left: auto; margin-right: auto;">
+          <div class="card">
+            <h3>Practice Information</h3>
+            <p><strong>📍 Location:</strong> Bilderdijkhof 1, 1422 DT Uithoorn</p>
+            <p><strong>📞 Phone:</strong> (0)645639455</p>
+            <p><strong>🌐 Website:</strong> <a href="https://www.poojakarnik.com" target="_blank" rel="noopener">www.poojakarnik.com</a></p>
+            <p><strong>💬 Languages:</strong> English, Dutch, Hindi</p>
+          </div>
+        </div>
       </div>
     </section>
   </main>
