--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,20 +29,51 @@
 
   <main class="section">
     <div class="container">
-      <h2>Contact</h2>
-      <div class="grid">
+      <h2>Contact Us</h2>
+      <p class="lead">Get in touch to learn more about classical homeopathy or to schedule a consultation.</p>
+      
+      <div class="grid mt-3">
         <article class="card">
-          <h3>Practice Location</h3>
-          <p>Bilderdijkhof 1, 1422 DT Uithoorn</p>
+          <h3>📍 Practice Location</h3>
+          <p><strong>Bilderdijkhof 1</strong><br>1422 DT Uithoorn<br>Netherlands</p>
         </article>
         <article class="card">
-          <h3>Phone</h3>
-          <p>(0)645639455</p>
+          <h3>📞 Phone</h3>
+          <p><a href="tel:+31645639455" style="color: var(--color-purple); text-decoration: none; font-weight: 600;">(0)645639455</a></p>
+          <p class="mt-1"><small>Available during practice hours</small></p>
         </article>
         <article class="card">
-          <h3>Website</h3>
-          <p><a href="https://www.poojakarnik.com" target="_blank" rel="noopener">www.poojakarnik.com</a></p>
+          <h3>🌐 Online</h3>
+          <p><a href="https://www.poojakarnik.com" target="_blank" rel="noopener" style="color: var(--color-purple); text-decoration: none; font-weight: 600;">www.poojakarnik.com</a></p>
         </article>
+        <article class="card">
+          <h3>💬 Languages</h3>
+          <p><strong>English • Dutch • Hindi</strong></p>
+          <p class="mt-1"><small>Consultations available in all three languages</small></p>
+        </article>
+      </div>
+
+      <div class="mt-3">
+        <h3>Practice Hours</h3>
+        <div class="card">
+          <p><strong>By Appointment Only</strong></p>
+          <p class="mt-1">Please call or use the appointment booking page to schedule your consultation. We offer flexible scheduling to accommodate your needs.</p>
+        </div>
+      </div>
+
+      <div class="mt-3">
+        <h3>Location Map</h3>
+        <div class="card">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2443.2937280340713!2d4.829854!3d52.246154!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5e6d4e1b1e1e1%3A0x1234567890abcdef!2sBilderdijkhof%201%2C%201422%20DT%20Uithoorn!5e0!3m2!1sen!2snl!4v1234567890" width="100%" height="350" style="border:0; border-radius: 12px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+
+      <div class="mt-3 center">
+        <p class="lead">Ready to book your consultation?</p>
+        <div class="cta-row mt-2" style="justify-content: center;">
+          <a class="button primary" href="./appointments.html">Book Appointment</a>
+          <a class="button outline" href="./training.html">View Training</a>
+        </div>
       </div>
     </div>
   </main>
