--- a/pages/treatments.html
+++ b/pages/treatments.html
@@ -29,32 +29,42 @@
 
   <main class="section">
     <div class="container">
-      <h2>Treatment Areas</h2>
-      <div class="grid">
+      <h2>Treatment Areas & Conditions</h2>
+      <p class="lead">Classical homeopathy can support healing across a wide spectrum of acute and chronic conditions.</p>
+      
+      <div class="grid mt-3">
         <article class="card">
-          <h3>Rheumatic & Autoimmune</h3>
-          <p>Individualized support for joint, muscle, and systemic inflammation.</p>
+          <h3>🦴 Rheumatic & Autoimmune</h3>
+          <p>Support for joint, muscle, and connective tissue conditions.</p>
         </article>
         <article class="card">
-          <h3>Digestive Health</h3>
-          <p>Care for IBS, indigestion, and gastric complaints.</p>
+          <h3>🍃 Digestive Health</h3>
+          <p>Gentle support for gastrointestinal concerns including IBS and GERD.</p>
         </article>
         <article class="card">
-          <h3>Respiratory</h3>
-          <p>Asthma, allergies, and recurrent colds.</p>
+          <h3>🌬️ Respiratory</h3>
+          <p>Care for asthma, allergies, and chronic respiratory issues.</p>
         </article>
         <article class="card">
-          <h3>Women’s Health</h3>
-          <p>Hormonal balance, menstrual health, pregnancy support.</p>
+          <h3>👩 Women's Health</h3>
+          <p>Specialized support through all life stages including pregnancy.</p>
         </article>
         <article class="card">
-          <h3>Pediatrics</h3>
-          <p>Gentle remedies for childhood complaints.</p>
+          <h3>👶 Pediatric Care</h3>
+          <p>Safe, gentle remedies for children's health concerns.</p>
         </article>
         <article class="card">
-          <h3>Mind-Body</h3>
-          <p>Stress, sleep, and emotional wellbeing.</p>
+          <h3>🧠 Mind-Body Health</h3>
+          <p>Holistic support for stress, anxiety, and emotional wellbeing.</p>
         </article>
+      </div>
+
+      <div class="mt-3 center">
+        <p class="lead">Ready to explore how homeopathy can support your health?</p>
+        <div class="cta-row mt-2" style="justify-content: center;">
+          <a class="button primary" href="./appointments.html">Book a Consultation</a>
+          <a class="button outline" href="./contact.html">Ask a Question</a>
+        </div>
       </div>
     </div>
   </main>
