chore: remove incorrect pages and update consultation navigation

--- a/pages/consultation.html
+++ b/pages/consultation.html
@@ -17,12 +17,7 @@
             </div>
             <nav class="main-nav">
                 <a href="../index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="treatments.html">Treatments</a>
                 <a href="consultation.html" class="active">Consultation</a>
-                <a href="training.html">Training</a>
-                <a href="appointments.html">Appointments</a>
-                <a href="contact.html">Contact</a>
             </nav>
         </div>
     </header>
@@ -213,8 +208,8 @@
                 <h2>Ready to Begin Your Healing Journey?</h2>
                 <p>Book your consultation today and take the first step towards natural, holistic health.</p>
                 <div class="cta-buttons">
-                    <a href="appointments.html" class="btn btn-primary">Book Appointment</a>
-                    <a href="contact.html" class="btn btn-secondary">Contact Me</a>
+                    <a href="consultation.html" class="btn btn-primary">Book Appointment</a>
+                    <a href="../index.html#contact" class="btn btn-secondary">Contact Me</a>
                 </div>
             </div>
         </section>
