feat: replace homepage with consultation content

--- a/index.html
+++ b/index.html
@@ -10,120 +10,215 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="container topbar">
-      <div class="brand">
-        <div class="logo" aria-hidden="true"></div>
-        <div>
-          <div class="title">Dr Pooja Karnik, B.H.M.S</div>
-          <div class="subtitle">Klassiek Homeopaat</div>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Consultation - Pooja Karnik</title>
+      <link rel="stylesheet" href="styles/main.css">
+    </head>
+    <body>
+      <header class="site-header">
+        <div class="header-container">
+          <div class="brand">
+            <a href="index.html" class="brand-link">
+              <span class="brand-logo"></span>
+              <span class="brand-name">Pooja Karnik</span>
+            </a>
+          </div>
+          <nav class="main-nav">
+            <a href="index.html" class="active">Home</a>
+            <a href="pages/consultation.html">Consultation</a>
+          </nav>
         </div>
-      </div>
-      <nav class="nav" aria-label="Primary">
-        <a href="./index.html">Home</a>
-        <a href="./pages/about.html">About</a>
-        <a href="./pages/treatments.html">Treatments</a>
-        <a href="./pages/training.html">Training</a>
-        <a href="./pages/appointments.html">Appointments</a>
-        <a href="./pages/contact.html">Contact</a>
-      </nav>
-    </div>
-  </header>
+      </header>
 
-  <section class="hero">
-    <div class="container wrap">
-      <div>
-        <h1>Classical Homeopathy for Whole-Person Wellness</h1>
-        <p class="lead">Evidence-informed, compassionate care tailored to you. Consultations in English, Dutch, and Hindi.</p>
-        <div class="badges">
-          <span class="badge purple">BHMS</span>
-          <span class="badge pink">Klassiek Homeopaat</span>
-          <span class="badge orange">Consultations</span>
-          <span class="badge green">Training & Workshops</span>
-        </div>
-        <div class="cta-row">
-          <a class="button primary" href="./pages/appointments.html">Book an Appointment</a>
-          <a class="button secondary" href="./pages/training.html">View Training</a>
-          <a class="button outline" href="./pages/contact.html">Get in Touch</a>
-        </div>
-      </div>
-      <aside class="card">
-        <h3>Upcoming Training</h3>
-        <p><strong>Biochemic Tissue Salts</strong> for Rheumatic Conditions</p>
-        <p>Sat 4 Oct, 2025 · 10:00–17:00 · Uithoorn</p>
-        <p>€95 per person · Tea & Coffee provided</p>
-        <p class="mt-2"><a class="button accent" href="https://eventix.shop/adkrvjib" target="_blank" rel="noopener">Register Now</a></p>
-        <p class="mt-1"><small>Also receive NVKH Accreditation Points</small></p>
-      </aside>
-    </div>
-  </section>
+      <main>
+        <section class="credentials-section">
+          <div class="container">
+            <div class="credentials-grid">
+              <div class="credential-item">KVK# 85796700</div>
+              <div class="credential-item">CAT BO Nr - 76452022-03-23</div>
+              <div class="credential-item">Central Council Of Homeopathy India – CCH-2402</div>
+              <div class="credential-item">NVKH: 04-2075</div>
+            </div>
+          </div>
+        </section>
 
-  <main>
-    <section class="section">
-      <div class="container">
-        <h2>Care Areas</h2>
-        <div class="grid">
-          <article class="card">
-            <h3>Chronic Conditions</h3>
-            <p>Support for rheumatic and autoimmune conditions with individualized remedies.</p>
-          </article>
-          <article class="card">
-            <h3>Acute Care</h3>
-            <p>Gentle, targeted support for acute complaints to aid recovery.</p>
-          </article>
-          <article class="card">
-            <h3>Women & Children</h3>
-            <p>Holistic care through life stages including pregnancy and pediatrics.</p>
-          </article>
-          <article class="card">
-            <h3>Mind-Body Health</h3>
-            <p>Integrative support for stress, sleep, and emotional wellbeing.</p>
-          </article>
-        </div>
-      </div>
-    </section>
+        <section class="consultation-type-section">
+          <div class="container">
+            <h1 class="section-title">Online Consultation</h1>
+            <div class="content-columns">
+              <div class="column-text">
+                <ul class="feature-list">
+                  <li>Online consultation available everywhere from the world</li>
+                  <li>Connect with me with your preferred channel</li>
+                  <li>A personal online meeting on Google Meet or Zoom</li>
+                  <li>Book appointment - By Email or By Phone</li>
+                </ul>
+              </div>
+              <div class="column-contact">
+                <div class="contact-methods">
+                  <div class="contact-method">
+                    <a href="https://wa.me/31645639455" target="_blank" class="contact-icon whatsapp">
+                      <img src="https://img.icons8.com/color/96/whatsapp--v1.png" alt="WhatsApp">
+                    </a>
+                    <p class="contact-label">+31-645639455</p>
+                  </div>
+                  <div class="contact-method">
+                    <a href="https://t.me/DrPoojaKarnik" target="_blank" class="contact-icon telegram">
+                      <img src="https://img.icons8.com/color/96/telegram-app--v1.png" alt="Telegram">
+                    </a>
+                    <p class="contact-label">@DrPoojaKarnik</p>
+                  </div>
+                  <div class="contact-method">
+                    <a href="mailto:advice@poojakarnik.com" class="contact-icon email">
+                      <img src="https://img.icons8.com/color/96/email.png" alt="Email">
+                    </a>
+                    <p class="contact-label">advice@PoojaKarnik.Com</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
 
-    <section class="section" style="background: var(--color-bg-alt);">
-      <div class="container">
-        <h2>Why Choose Classical Homeopathy?</h2>
-        <p>Classical homeopathy treats you as a whole person, not just isolated symptoms. Each consultation involves detailed case-taking to understand your unique constitution, lifestyle, and health history. Remedies are carefully selected and adjusted based on your response, with regular follow-ups to monitor progress and optimize care.</p>
-        <div class="grid mt-3">
-          <article class="card">
-            <h3>🌿 Natural & Gentle</h3>
-            <p>Safe remedies suitable for all ages, from infants to elderly.</p>
-          </article>
-          <article class="card">
-            <h3>🎯 Individualized Care</h3>
-            <p>Treatment tailored specifically to your unique needs and constitution.</p>
-          </article>
-          <article class="card">
-            <h3>💪 Long-term Wellness</h3>
-            <p>Addresses root causes to support lasting health improvements.</p>
-          </article>
-        </div>
-      </div>
-    </section>
+        <section class="consultation-type-section alt-bg">
+          <div class="container">
+            <h1 class="section-title">Physical Consultation</h1>
+            <div class="content-columns">
+              <div class="column-text">
+                <ul class="feature-list">
+                  <li>Available by Public transport - Tram 25, Bus 174</li>
+                  <li>Free Parking available in the vicinity of practice</li>
+                  <li>Consultation only by appointment, consultation hours Monday to Friday 9-5</li>
+                </ul>
+                <div class="practice-location">
+                  <h3>Practice Location:</h3>
+                  <p>Antoon Coolenlaan 41, 1422 GN Uithoorn, Netherlands</p>
+                </div>
+              </div>
+              <div class="column-map">
+                <iframe src="https://maps.google.com/maps?q=Antoon+Coolenlaan+41,+1422+GN+Uithoorn,+Netherlands&output=embed" width="100%" height="350" style="border:0; border-radius: 8px;" allowfullscreen="" loading="lazy"></iframe>
+              </div>
+            </div>
+          </div>
+        </section>
 
-    <section class="section">
-      <div class="container center">
-        <h2>What to Expect</h2>
-        <div class="grid mt-2">
-          <article class="card">
-            <h3>Initial Consultation</h3>
-            <p><strong>90-120 minutes</strong></p>
-            <p>Comprehensive case-taking covering physical, emotional, and lifestyle aspects. We'll discuss your health history, current concerns, and goals.</p>
-          </article>
-          <article class="card">
-            <h3>Follow-up Sessions</h3>
-            <p><strong>30-45 minutes</strong></p>
-            <p>Review your progress, adjust remedies if needed, and continue supporting your healing journey.</p>
-          </article>
-          <article class="card">
-            <h3>Ongoing Support</h3>
-            <p><strong>As needed</strong></p>
-            <p>Available for questions between appointments. Regular check-ins ensure optimal results.</p>
-          </article>
+        <section class="consultation-details-section">
+          <div class="container">
+            <h1 class="section-title">Consultation and Treatment Details</h1>
+            <div class="details-content">
+              <ul class="detailed-list">
+                <li><strong>Consultation Types:</strong> Intake, First Consultation or Follow-up</li>
+                <li><strong>Intake:</strong> General information about homeopathy method</li>
+                <li><strong>First Consultation:</strong> Primarily involves case taking
+                  <ul class="sub-list">
+                    <li>For people living in Netherlands: First consultation will always be in-person, follow-ups can be online</li>
+                    <li>For people living outside Netherlands: First consultation can also be done online</li>
+                    <li>Usually takes 1 hour and 30 minutes. A detailed case is taken.</li>
+                  </ul>
+                </li>
+                <li><strong>Follow-up:</strong> For ongoing case management
+                  <ul class="sub-list">
+                    <li>Can be done physical or online</li>
+                    <li>Usually takes 30 minutes but can also be 45 minutes or 1 hour - depending upon the situation</li>
+                  </ul>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section class="payment-section alt-bg">
+          <div class="container">
+            <h1 class="section-title">Payment Methods</h1>
+            <div class="payment-content">
+              <ul class="detailed-list">
+                <li>After the consultation an invoice will be sent to your registered email address which you can forward to insurance</li>
+                <li>PIN payment is not possible in the practice</li>
+                <li>Appointments that are not cancelled at least 24 hours in advance will be charged</li>
+              </ul>
+              <div class="pricing-card">
+                <h3>Consultation Charges:</h3>
+                <div class="price-list">
+                  <div class="price-item"><span class="service-name">First Consultation</span><span class="service-price">€70</span></div>
+                  <div class="price-item"><span class="service-name">Acute Case Taking</span><span class="service-price">€50</span></div>
+                  <div class="price-item"><span class="service-name">Follow-ups</span><span class="service-price">€50</span></div>
+                  <div class="price-item"><span class="service-name">Emergency Consultation (after hours)</span><span class="service-price">€75</span></div>
+                  <div class="price-item highlight"><span class="service-name">Telephonic Consultation (less than 15 mins)</span><span class="service-price">Free of Charge</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="affiliations-section">
+          <div class="container">
+            <h1 class="section-title">Affiliations</h1>
+            <div class="affiliations-note">
+              <p>Registered and affiliated with professional homeopathic organizations ensuring highest standards of practice and continuing education.</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="privacy-section alt-bg">
+          <div class="container">
+            <h1 class="section-title">Privacy Matters</h1>
+            <p class="privacy-text">Your data will be handled with the utmost care, as indicated in our <a href="pages/privacy.html">privacy statement</a>.</p>
+          </div>
+        </section>
+
+        <section class="satisfaction-section">
+          <div class="container">
+            <h1 class="section-title">Satisfied</h1>
+            <p class="satisfaction-text">If you are not satisfied with your treatment, I invite you to discuss this with me. If we cannot resolve it together, I would like to refer you to the NVKH website: <a href="https://www.nvkh.nl/contact/ik-heb-een-klacht/" target="_blank">I have a complaint - NVKH</a></p>
+          </div>
+        </section>
+
+        <section class="cta-section">
+          <div class="container">
+            <h2>Ready to Begin Your Healing Journey?</h2>
+            <p>Book your consultation today and take the first step towards natural, holistic health.</p>
+            <div class="cta-buttons">
+              <a href="pages/consultation.html" class="btn btn-primary">Book Appointment</a>
+              <a href="pages/consultation.html" class="btn btn-secondary">Contact Me</a>
+            </div>
+          </div>
+        </section>
+      </main>
+
+      <footer class="site-footer">
+        <div class="container">
+          <div class="footer-content">
+            <div class="footer-section">
+              <h3>Pooja Karnik</h3>
+              <p>Classical Homeopathy</p>
+              <p>BHMS, Klassiek Homeopaat</p>
+            </div>
+            <div class="footer-section">
+              <h3>Contact</h3>
+              <p>Bilderdijkhof 1<br>1422 DT Uithoorn</p>
+              <p>Phone: <a href="tel:+31645639455">(0)645639455</a></p>
+              <p><a href="http://www.poojakarnik.com">www.poojakarnik.com</a></p>
+            </div>
+            <div class="footer-section">
+              <h3>Languages</h3>
+              <p>🇬🇧 English</p>
+              <p>🇳🇱 Dutch</p>
+              <p>🇮🇳 Hindi</p>
+            </div>
+          </div>
+          <div class="footer-bottom">
+            <p>&copy; <span data-year></span> Pooja Karnik. All rights reserved.</p>
+          </div>
         </div>
-      </div>
+      </footer>
+
+      <script src="scripts/main.js" defer></script>
+    </body>
+    </html>
     </section>
 
     <section class="section" style="background: var(--color-bg-alt);">
