--- a/footer.html
+++ b/footer.html
@@ -1,28 +1,28 @@
 <footer role="contentinfo">
   <div class="footer-container">
-    <!-- Professional Credentials -->
-    <div class="footer-credentials">
-      <h3>Professional Credentials</h3>
-      <div class="credentials-grid-footer">
-        <div class="credential-footer-item">
-          <span class="credential-label-footer">KVK#</span>
-          <span class="credential-value-footer">85796700</span>
-        </div>
-        <div class="credential-footer-item">
-          <span class="credential-label-footer">CAT BO Nr</span>
-          <span class="credential-value-footer">76452022-03-23</span>
-        </div>
-        <div class="credential-footer-item">
-          <span class="credential-label-footer">CCH India</span>
-          <span class="credential-value-footer">CCH-2402</span>
-        </div>
-        <div class="credential-footer-item">
-          <span class="credential-label-footer">NVKH</span>
-          <span class="credential-value-footer">04-2075</span>
+    <!-- Main Footer Content -->
+    <div class="footer-main-grid">
+      <!-- Contact Information -->
+      <div class="footer-section">
+        <h3>Contact</h3>
+        <p>Antoon Coolenlaan 41<br>1422 GN Uithoorn, Netherlands</p>
+        <p><a href="tel:+31645639455">+31-645639455</a></p>
+        <p><a href="mailto:info@poojakarnik.com">info@poojakarnik.com</a></p>
+      </div>
+      
+      <!-- Professional Credentials -->
+      <div class="footer-section">
+        <h3>Credentials</h3>
+        <div class="credentials-compact">
+          <p><strong>KVK#</strong> 85796700</p>
+          <p><strong>CAT BO Nr</strong> 76452022-03-23</p>
+          <p><strong>CCH India</strong> CCH-2402</p>
+          <p><strong>NVKH</strong> 04-2075</p>
         </div>
       </div>
     </div>
+    
     <hr class="footer-divider">
-    <p>&copy; 2024 Pooja Karnik. All rights reserved.</p>
+    <p class="footer-copyright">&copy; 2024 Pooja Karnik. All rights reserved.</p>
   </div>
 </footer>
