--- a/index.html
+++ b/index.html
@@ -31,36 +31,44 @@
         <h1>Online Consultation</h1>
         <p class="section-intro">Connect with me from anywhere in the world through your preferred communication channel</p>
         
-        <div class="consultation-details">
-          <ul class="details-list">
-            <li>Online consultation available everywhere from the world.</li>
-            <li>Connect with me with your preferred channel</li>
-            <li>A personal online meeting on google meet or zoom</li>
-            <li>Book appointment - By Email or By Phone</li>
-          </ul>
-        </div>
+        <div class="consultation-content-wrapper">
+          <div class="consultation-details">
+            <ul class="details-list">
+              <li>Online consultation available everywhere from the world.</li>
+              <li>Connect with me with your preferred channel</li>
+              <li>A personal online meeting on google meet or zoom</li>
+              <li>Book appointment - By Email or By Phone</li>
+            </ul>
+          </div>
 
-        <div class="contact-methods">
-          <div class="contact-item">
-            <a href="https://wa.me/31645639455" target="_blank" class="contact-link">
-              <img src="./images/whatsapp-icon.png" alt="WhatsApp">
-            </a>
-            <h3>WhatsApp</h3>
-            <p class="contact-number">+31-645639455</p>
-          </div>
-          <div class="contact-item">
-            <a href="https://t.me/DrPoojaKarnik" target="_blank" class="contact-link">
-              <img src="./images/telegram-icon.png" alt="Telegram">
-            </a>
-            <h3>Telegram</h3>
-            <p class="contact-username">@DrPoojaKarnik</p>
-          </div>
-          <div class="contact-item">
-            <a href="mailto:info@poojakarnik.com" class="contact-link">
-              <img src="./images/email-icon.png" alt="Email">
-            </a>
-            <h3>Email</h3>
-            <p class="contact-email"><a href="mailto:info@poojakarnik.com">info@poojakarnik.com</a></p>
+          <div class="contact-methods">
+            <div class="contact-item">
+              <a href="https://wa.me/31645639455" target="_blank" class="contact-link">
+                <img src="./images/whatsapp-icon.png" alt="WhatsApp">
+              </a>
+              <div class="contact-info">
+                <h3>WhatsApp</h3>
+                <p class="contact-number">+31-645639455</p>
+              </div>
+            </div>
+            <div class="contact-item">
+              <a href="https://t.me/DrPoojaKarnik" target="_blank" class="contact-link">
+                <img src="./images/telegram-icon.png" alt="Telegram">
+              </a>
+              <div class="contact-info">
+                <h3>Telegram</h3>
+                <p class="contact-username">@DrPoojaKarnik</p>
+              </div>
+            </div>
+            <div class="contact-item">
+              <a href="mailto:info@poojakarnik.com" class="contact-link">
+                <img src="./images/email-icon.png" alt="Email">
+              </a>
+              <div class="contact-info">
+                <h3>Email</h3>
+                <p class="contact-email"><a href="mailto:info@poojakarnik.com">info@poojakarnik.com</a></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -125,35 +133,37 @@
         <h1>Payment Methods & Pricing</h1>
         <p class="section-intro">Transparent pricing and flexible payment options</p>
         
-        <div class="pricing-grid">
-          <div class="pricing-item">
-            <h3>First Consultation</h3>
-            <p class="price">€70</p>
+        <div class="pricing-payment-wrapper">
+          <div class="pricing-grid">
+            <div class="pricing-item">
+              <h3>First Consultation</h3>
+              <p class="price">€70</p>
+            </div>
+            <div class="pricing-item">
+              <h3>Acute Case Taking</h3>
+              <p class="price">€50</p>
+            </div>
+            <div class="pricing-item">
+              <h3>Follow-ups</h3>
+              <p class="price">€50</p>
+            </div>
+            <div class="pricing-item">
+              <h3>Emergency (After Hours)</h3>
+              <p class="price">€75</p>
+            </div>
+            <div class="pricing-item">
+              <h3>Telephonic (<15 min)</h3>
+              <p class="price">Free</p>
+            </div>
           </div>
-          <div class="pricing-item">
-            <h3>Acute Case Taking</h3>
-            <p class="price">€50</p>
-          </div>
-          <div class="pricing-item">
-            <h3>Follow-ups</h3>
-            <p class="price">€50</p>
-          </div>
-          <div class="pricing-item">
-            <h3>Emergency (After Hours)</h3>
-            <p class="price">€75</p>
-          </div>
-          <div class="pricing-item">
-            <h3>Telephonic (<15 min)</h3>
-            <p class="price">Free</p>
-          </div>
-        </div>
 
-        <div class="payment-info">
-          <ul class="info-list">
-            <li>Invoices sent to registered email for insurance forwarding</li>
-            <li>PIN payment not available at practice</li>
-            <li>Cancellations must be made 24 hours in advance or will be charged</li>
-          </ul>
+          <div class="payment-info">
+            <ul class="info-list">
+              <li>Invoices sent to registered email for insurance forwarding</li>
+              <li>PIN payment not available at practice</li>
+              <li>Cancellations must be made 24 hours in advance or will be charged</li>
+            </ul>
+          </div>
         </div>
       </div>
     </section>
@@ -165,33 +175,13 @@
         <p class="section-intro">Certified and affiliated with leading homeopathy organizations</p>
         <div class="affiliations-grid">
           <div class="affiliation-item">
-            <img src="./images/affiliation2.png" alt="CAT Collegiate Alternative Therapeuten 2022">
-            <h3>CAT</h3>
-            <p>Collegiate Alternative Therapeuten 2022</p>
-          </div>
-          <div class="affiliation-item">
-            <img src="./images/affiliation4.png" alt="CAT Collegiate Alternative Therapeuten 2023">
-            <h3>CAT</h3>
-            <p>Collegiate Alternative Therapeuten 2023</p>
-          </div>
-          <div class="affiliation-item">
-            <img src="./images/affiliation3.png" alt="CAT Collegiate Alternative Therapeuten 2024">
-            <h3>CAT</h3>
-            <p>Collegiate Alternative Therapeuten 2024</p>
-          </div>
-          <div class="affiliation-item">
-            <img src="./images/affiliation1.png" alt="CAT Collegiate Alternative Therapeuten 2025">
-            <h3>CAT</h3>
-            <p>Collegiate Alternative Therapeuten 2025</p>
-          </div>
-          <div class="affiliation-item">
             <img src="./images/affiliation5.png" alt="NVKH Nederlandse Vereniging van Klassiek Homeopaten">
             <h3>NVKH</h3>
             <p>Nederlandse Vereniging van Klassiek Homeopaten</p>
           </div>
           <div class="affiliation-item">
-            <img src="./images/affiliation6.png" alt="RCBZ Een vrije zorgkeuze">
-            <h3>RCBZ</h3>
+            <img src="./images/affiliation6.png" alt="RBCZ Een vrije zorgkeuze">
+            <h3>RBCZ</h3>
             <p>Een Vrije Zorgkeuze</p>
           </div>
         </div>
