--- a/header.html
+++ b/header.html
@@ -2,19 +2,20 @@
   <div class="header-container">
     <div class="brand">
       <a href="index.html" class="brand-link">
-        <span class="brand-name">Pooja Karnik</span>
+        <img src="./images/logo.png" alt="Dr Pooja Karnik" class="brand-logo">
       </a>
     </div>
-    <nav class="main-nav" role="navigation">
+    <button class="mobile-menu-button" id="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
+    <nav class="main-nav" role="navigation" id="main-nav">
       <ul>
-        <li><a href="index.html" class="nav-active">Consultation</a></li>
-        <li><a href="homoeopathy.html">Homoeopathy</a></li>
-        <li><a href="#about-me">About me</a></li>
-        <li><a href="#faq">FAQ</a></li>
-        <li><a href="#articles">Articles</a></li>
-        <li><a href="#trainings">Trainings</a></li>
-        <li><a href="#sessions">Sessions</a></li>
-        <li><a href="#privacy-statement">Privacy Statement</a></li>
+        <li><a href="index.html" data-page="index">Consultation</a></li>
+        <li><a href="homoeopathy.html" data-page="homoeopathy">Homoeopathy</a></li>
+        <li><a href="#about-me" data-page="about-me">About me</a></li>
+        <li><a href="#faq" data-page="faq">FAQ</a></li>
+        <li><a href="#articles" data-page="articles">Articles</a></li>
+        <li><a href="#trainings" data-page="trainings">Trainings</a></li>
+        <li><a href="#sessions" data-page="sessions">Sessions</a></li>
+        <li><a href="#privacy-statement" data-page="privacy-statement">Privacy Statement</a></li>
       </ul>
     </nav>
   </div>
