--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
       <ul>
         <li><a href="index.html" data-page="index">Consultation</a></li>
         <li><a href="homoeopathy.html" data-page="homoeopathy">Homoeopathy</a></li>
-        <li><a href="#about-me" data-page="about-me">About me</a></li>
+          <li><a href="aboutme.html" data-page="about-me">About me</a></li>
         <li><a href="#faq" data-page="faq">FAQ</a></li>
         <li><a href="#articles" data-page="articles">Articles</a></li>
         <li><a href="#trainings" data-page="trainings">Trainings</a></li>
